- 1725493 Fixed 401 send twice
- 1746771 Fixed Memory leak in classProviderGz.c - in gatherNameSpaces()
- 1748392 Fixed associations in interop namespace might not work
- 1751084 Fixed sfcb does not support a hostname in an objectpath
- 1759208 Fixed internalProvider segfaults when object not found
- 1752715 Fixed sfcb does not unescape incoming blanks

Changes in 1.2.3
================

Bugs fixed:
- 1693530 Fixed problem with certain queries
- 1708568 Fixed providers for multiple classes are invoked only once
- 1724370 Fixed sfcb can run out of file handles
- 1693675 Fixed delivery of an indication can lock sfcb
- 1697772 Fixed provider resolution can fail for associators
- 1701174 Fixed Bug with ein on classes in interop namespace
- 1702310 Fixed indProv segfaults while ci with NULL query
- 1708071 Fixed interopProvider choking on getinstance
- 1711283 Fixed minor mem problem in qsRelease
- 1712545 Fixed wrong results in association operations
- 1712582 Fixed parser does not accept type attribute in KEYVALUE tag
- 1663641 Fixed parser doesn't accept empty IPARAMVALUE
- 1717262 Fixed sfcb might not properly return the hostname for some calls
- 1724719 Fixed constClass leaks memory
- 1724753 Fixed qualifier creation support for classes
- 1725608 Fixed default state of subscription state should be enabled
- 1728904 Fixed problem with dateTime Values
- 1730553 Fixed createClass fails in standard classProvider
- 1732080 Fixed sfcb ignores property filter in getInstance upcalls
- 1732774 Fixed random provider segfaults when using local client interface
- 1730915 Fixed getInstance fails for associations
- 1734174 Fixed sfcb behaves different when assocclass & resultclass unknown
- 1741211 Fixed cleanup compiler warnings
- 1698462 Fixed upcall with empty parameter list crash
- 1715519 Fixed missing SLP headers
- 1741435 Fixed cross-built repository corruption

Changes in 1.2.2
================

New features:
- 1672704 Added IPv6 support